[gd_scene load_steps=29 format=2]

[ext_resource path="res://addons/godot-xr-tools/functions/Function_Direct_movement.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Pickup.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot-xr-tools/assets/LeftHand.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/godot-xr-tools/assets/RightHand.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Turn_movement.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/godot-openxr/scenes/first_person_controller_vr.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/godot-xr-tools/assets/PlayerBody.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ClimbingRung.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Climb_movement.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/follow_bone_3d/XRToolsPhysicsHands.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Floor.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/TitleTable.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/OptionsLeverTextMesh.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/OptionsLeverSnap.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/QuitLever.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/OverlayHelper.tscn" type="PackedScene" id=18]
[ext_resource path="res://GameLevels/BackgroundMusic.gd" type="Script" id=19]
[ext_resource path="res://GameLevels/GameLevel2.gd" type="Script" id=20]
[ext_resource path="res://sounds/janus-turning.mp3" type="AudioStream" id=21]
[ext_resource path="res://GameLevels/ClimbingNodeGenerator.gd" type="Script" id=22]
[ext_resource path="res://sounds/You_can_pick_up_obje_927.mp3" type="AudioStream" id=23]
[ext_resource path="res://materials/leverhandlematerial.tres" type="Material" id=24]
[ext_resource path="res://scenes/Water.tscn" type="PackedScene" id=25]
[ext_resource path="res://materials/brightoutdoorworldenv.tres" type="Environment" id=26]
[ext_resource path="res://scenes/PoolWall1.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/PoolWallB.tscn" type="PackedScene" id=28]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Glide_movement.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/Level2RockSurround.tscn" type="PackedScene" id=30]

[node name="GameLevel2" type="Spatial"]
script = ExtResource( 20 )

[node name="FPController" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 22 )

[node name="ARVRCamera" parent="FPController" index="1"]
far = 1000.0

[node name="LeftHand" parent="FPController/LeftHandController" index="0" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.03, -0.05, 0.15 )

[node name="Function_Direct_movement" parent="FPController/LeftHandController" index="1" instance=ExtResource( 1 )]
strafe = true

[node name="Function_Pickup" parent="FPController/LeftHandController" index="2" instance=ExtResource( 3 )]
grab_collision_mask = 2
ranged_collision_mask = 2

[node name="RightHand" parent="FPController/RightHandController" index="0" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03, -0.05, 0.15 )

[node name="Function_Turn_movement" parent="FPController/RightHandController" index="1" instance=ExtResource( 6 )]
smooth_rotation = true

[node name="Function_Pickup" parent="FPController/RightHandController" index="2" instance=ExtResource( 3 )]
grab_collision_mask = 2
ranged_collision_mask = 2

[node name="PlayerBody" parent="FPController" instance=ExtResource( 8 )]

[node name="Function_Climb_movement" parent="FPController" instance=ExtResource( 11 )]
left_pickup = NodePath("../LeftHandController/Function_Pickup")
right_pickup = NodePath("../RightHandController/Function_Pickup")

[node name="Function_Glide_movement" parent="FPController" instance=ExtResource( 29 )]

[node name="XRToolsPhysicsHands" parent="." instance=ExtResource( 12 )]

[node name="LHFollowBone3D" parent="XRToolsPhysicsHands" index="0"]
transform = Transform( -0.0316173, 0.0127275, -0.000628471, -0.000167084, -0.00209511, -0.0340238, -0.0127419, -0.0315541, 0.0020056, -0.529683, 0.984693, 21.494 )
selected_bone = 7

[node name="RHFollowBone3D" parent="XRToolsPhysicsHands" index="1"]
transform = Transform( 0.0316173, -0.0127275, 0.000628471, -0.000167084, -0.00209511, -0.0340238, -0.0127419, -0.0315541, 0.0020056, 0.529683, 0.984693, 21.494 )
selected_bone = 7

[node name="LPalmFollowBone3D" parent="XRToolsPhysicsHands" index="2"]
transform = Transform( -0.0339721, -0.00281232, -0.000149438, -0.000176133, 0.00392693, -0.0338613, 0.00281077, -0.0337447, -0.00392804, -0.53, 0.949478, 21.6394 )
selected_bone = 8

[node name="RPalmFollowBone3D" parent="XRToolsPhysicsHands" index="3"]
transform = Transform( 0.0339721, 0.00281231, 0.000149437, -0.000176133, 0.00392693, -0.0338613, 0.00281077, -0.0337447, -0.00392804, 0.53, 0.949478, 21.6394 )
selected_bone = 8

[node name="Floor" parent="." instance=ExtResource( 13 )]

[node name="Floor9" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49.9125, 0, 49.2783 )

[node name="Floor8" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -50.0375, 0, 49.599 )

[node name="Floor7" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -50.0463, 0, -49.4745 )

[node name="Floor6" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 49.636 )

[node name="Floor5" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50.0974, 0, -49.7215 )

[node name="Floor4" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -50.0555, 0, 0 )

[node name="Floor3" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49.9157, 0, 0 )

[node name="Floor2" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -49.7076 )

[node name="TitleTable" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 19.3502 )

[node name="OptionsLeverSnap" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.57066, 1.11218, 19.8918 )

[node name="OptionsLeverTextMesh" parent="." instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.589645, 1.39605, 19.9305 )

[node name="QuitLeverTextMesh" parent="." instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.876758, 1.38369, 19.9031 )

[node name="OverlayHelper" parent="." instance=ExtResource( 18 )]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
autoplay = true
script = ExtResource( 19 )

[node name="Voiceovers" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[node name="ClimbingNodeGenerator" type="Spatial" parent="."]
script = ExtResource( 22 )
max_rung_distance = 0.8

[node name="FirstClimbingRung" parent="ClimbingNodeGenerator" instance=ExtResource( 10 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1.25, 17 )

[node name="Handle" parent="ClimbingNodeGenerator/FirstClimbingRung" index="1"]
material/0 = ExtResource( 24 )

[node name="HandleBar1" parent="ClimbingNodeGenerator/FirstClimbingRung" index="2"]
material/0 = ExtResource( 24 )

[node name="HandleBar2" parent="ClimbingNodeGenerator/FirstClimbingRung" index="3"]
material/0 = ExtResource( 24 )

[node name="PoolWall1" parent="." instance=ExtResource( 27 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.125, 15.7703 )

[node name="PoolWall2" parent="." instance=ExtResource( 27 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.125, -4.16668 )

[node name="PoolWallB" parent="." instance=ExtResource( 28 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5.1, 1.125, 5.85 )

[node name="PoolWallB2" parent="." instance=ExtResource( 28 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.1, 1.125, 5.85 )

[node name="Water" parent="." instance=ExtResource( 25 )]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.11671, 5.728 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 26 )

[node name="Level2RockSurround" parent="." instance=ExtResource( 30 )]
transform = Transform( 4.14694, 2.79336, -1.22102e-07, 0, -2.18557e-07, -5, -2.79336, 4.14694, -1.81269e-07, 32.8927, 3.36578, -5.81957 )

[node name="Level2RockSurround3" parent="." instance=ExtResource( 30 )]
transform = Transform( -2.18557e-07, 5, -2.18557e-07, 0, -2.18557e-07, -5, -5, -2.18557e-07, 9.55343e-15, 1.536, 3, -16.049 )

[node name="Level2RockSurround4" parent="." instance=ExtResource( 30 )]
transform = Transform( -2.18557e-07, 5, -2.18557e-07, 0, -2.18557e-07, -5, -5, -2.18557e-07, 9.55343e-15, 0.54, 3, 27.5 )

[node name="Level2RockSurround5" parent="." instance=ExtResource( 30 )]
transform = Transform( 4.5724, 2.02315, -8.84349e-08, 0, -2.18557e-07, -5, -2.02315, 4.5724, -1.99866e-07, -26.1974, 3, 8.07263 )

[node name="Level2RockSurround6" parent="." instance=ExtResource( 30 )]
transform = Transform( 3.41822, -3.64908, 1.59506e-07, 0, -2.18557e-07, -5, 3.64908, 3.41822, -1.49415e-07, 39.0083, 4.3313, 23.1679 )

[node name="Level2RockSurround2" parent="." instance=ExtResource( 30 )]
transform = Transform( -2.90231, 4.07144, -1.77968e-07, 0, -2.18557e-07, -5, -4.07144, -2.90231, 1.26864e-07, -30.8969, 2.98474, -18.4522 )

[connection signal="victory_platform_generated" from="ClimbingNodeGenerator" to="." method="_on_ClimbingNodeGenerator_victory_platform_generated"]

[editable path="FPController"]
[editable path="FPController/LeftHandController/LeftHand"]
[editable path="FPController/LeftHandController/LeftHand/LeftHand"]
[editable path="FPController/RightHandController/RightHand"]
[editable path="FPController/RightHandController/RightHand/RightHand"]
[editable path="XRToolsPhysicsHands"]
[editable path="TitleTable"]
[editable path="QuitLeverTextMesh"]
[editable path="OverlayHelper"]
[editable path="ClimbingNodeGenerator/FirstClimbingRung"]
